tests/small/bad/testMain01.lat
/* multiple return statement in main*/
int main(){
    int x, y = 7;
    printInt(x);
    return 10;
    printInt(y);
    return 0 ;
}